[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/fonts/raw/Mat Saleh.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/ui/bg_tutorial.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/close_button_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/close_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/close_button_hover.png" type="Texture" id=8]
[ext_resource path="res://src/main_menu/TutorialController.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/custom/popup_heading.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/sprites/player/card_icon_rot_fullsize.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/enemy/intent_buff.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/enemy/intent_attack.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/enemy/intent_debuff.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/slot_icon_upgrade_fullsize.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/slot_icon_heal_fullsize.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/slot_icon_attack_fullsize.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/slot_icon_armor_fullsize.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/custom/popup_text.tres" type="DynamicFont" id=19]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="TutorialController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="TabContainer" type="HBoxContainer" parent="."]
margin_left = 145.896
margin_top = 90.6259
margin_right = 368.896
margin_bottom = 169.626
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToTab" type="TextureButton" parent="TabContainer"]
margin_right = 223.0
margin_bottom = 79.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="TabContainer/HowToTab"]
margin_left = 18.3018
margin_top = 30.8389
margin_right = 213.302
margin_bottom = 89.8389
custom_fonts/font = SubResource( 1 )
text = "THE BASICS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitTab" type="TextureButton" parent="TabContainer"]
margin_left = 253.0
margin_right = 476.0
margin_bottom = 79.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="TabContainer/FruitTab"]
margin_left = 18.3018
margin_top = 9.1298
margin_right = 213.302
margin_bottom = 68.1298
custom_fonts/font = SubResource( 1 )
text = "WHAT YOUR
MECH CAN DO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.072
anchor_top = 0.25
anchor_right = 0.795
anchor_bottom = 0.996
margin_left = 0.799995
margin_top = -29.0
margin_bottom = -29.4
custom_constants/separation = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rot" type="HBoxContainer" parent="FruitContainer"]
margin_right = 1100.0
margin_bottom = 172.0

[node name="TextureRect" type="TextureRect" parent="FruitContainer/Rot"]
margin_right = 96.0
margin_bottom = 172.0
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="FruitContainer/Rot"]
margin_left = 100.0
margin_right = 1100.0
margin_bottom = 172.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "All your Fruits rot with time. When they expire, they are automatically removed from your Mech. Some enemies also hasten this process, which will cause you damage if the Fruit in question is already too far gone."
autowrap = true

[node name="Attack" type="HBoxContainer" parent="FruitContainer"]
margin_top = 194.0
margin_right = 1100.0
margin_bottom = 296.0

[node name="TextureRect" type="TextureRect" parent="FruitContainer/Attack"]
margin_right = 96.0
margin_bottom = 102.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="FruitContainer/Attack"]
margin_left = 100.0
margin_right = 1100.0
margin_bottom = 102.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Most Fruit can deal damage to your enemies. And remember:
()Your enemies can't hurt you if they're dead!)("
autowrap = true

[node name="HP" type="HBoxContainer" parent="FruitContainer"]
margin_top = 318.0
margin_right = 1100.0
margin_bottom = 490.0

[node name="TextureRect" type="TextureRect" parent="FruitContainer/HP"]
margin_right = 96.0
margin_bottom = 172.0
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="FruitContainer/HP"]
margin_left = 100.0
margin_right = 1100.0
margin_bottom = 172.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Hit Points of your Mech and your enemies determine how much damage either of you can take before going down. If your HP drop to 0, it's game over. Some Fruit will heal your HP, but never over your maximum of 30."
autowrap = true

[node name="Armor" type="HBoxContainer" parent="FruitContainer"]
margin_top = 512.0
margin_right = 1100.0
margin_bottom = 608.0

[node name="TextureRect" type="TextureRect" parent="FruitContainer/Armor"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="FruitContainer/Armor"]
margin_left = 100.0
margin_top = 14.0
margin_right = 1100.0
margin_bottom = 81.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Armor can be accrued by some Fruit. As long as you have armor, all incoming damage is reduced by 50%."
autowrap = true

[node name="Upgrade" type="HBoxContainer" parent="FruitContainer"]
margin_top = 630.0
margin_right = 1100.0
margin_bottom = 726.0

[node name="TextureRect" type="TextureRect" parent="FruitContainer/Upgrade"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="FruitContainer/Upgrade"]
margin_left = 100.0
margin_top = 14.0
margin_right = 1100.0
margin_bottom = 81.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sometimes you will find upgraded Fruit. These possess superior stats compared to their normal counterparts."
autowrap = true

[node name="HowToContainer" type="VBoxContainer" parent="."]
anchor_left = 0.096
anchor_top = 0.218
anchor_right = 0.096
anchor_bottom = 0.218
margin_left = -37.6
margin_top = -0.200012
margin_right = 919.88
margin_bottom = 787.46
custom_constants/separation = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HowToContainer"]
margin_right = 1177.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 10 )
text = "POWER YOUR MECH"

[node name="Label2" type="Label" parent="HowToContainer"]
margin_top = 51.0
margin_right = 1177.0
margin_bottom = 363.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "At the start of your turn, you draw 1 card. If you have no cards in hand, you will draw 3 instead. You can play these cards into your Mech's Fruit Slots, which power its abilities.

Each Fruit has unique stats, so get mixin'!

At the end of your turn, you will discard your hand if you have more than 5 cards in it, so play your Fruit or lose them to the approaching Entropy!"
autowrap = true

[node name="Label3" type="Label" parent="HowToContainer"]
margin_top = 385.0
margin_right = 1177.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 10 )
text = "ENEMIES WILL KILL YOU"

[node name="Intents" type="HBoxContainer" parent="HowToContainer"]
margin_top = 436.0
margin_right = 1177.0
margin_bottom = 573.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HowToContainer/Intents"]
margin_right = 55.0
margin_bottom = 137.0
texture = ExtResource( 13 )

[node name="TextureRect3" type="TextureRect" parent="HowToContainer/Intents"]
margin_left = 59.0
margin_right = 114.0
margin_bottom = 137.0
texture = ExtResource( 14 )

[node name="TextureRect2" type="TextureRect" parent="HowToContainer/Intents"]
margin_left = 118.0
margin_right = 173.0
margin_bottom = 137.0
texture = ExtResource( 12 )

[node name="Label2" type="Label" parent="HowToContainer/Intents"]
margin_left = 177.0
margin_right = 1177.0
margin_bottom = 137.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "During your turn, you will see what the enemy is planning. They can attack you, afflict you with a negative effect, or give themselves a boost, sometimes even a mix of all of these."
autowrap = true

[node name="Events" type="HBoxContainer" parent="HowToContainer"]
margin_top = 595.0
margin_right = 1177.0
margin_bottom = 732.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HowToContainer/Events"]
margin_right = 96.0
margin_bottom = 137.0
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="HowToContainer/Events"]
margin_left = 100.0
margin_right = 1100.0
margin_bottom = 137.0
rect_min_size = Vector2( 1000, 30 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "After some time, Entropy will close in on you and occasionally trigger events after killing an enemy. These have devastating effects, so bunker up if you have the resources to spare."
autowrap = true

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 1169.65
margin_top = 74.1624
margin_right = 1294.65
margin_bottom = 199.162
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TabContainer/HowToTab" to="." method="_on_HowToTab_pressed"]
[connection signal="pressed" from="TabContainer/FruitTab" to="." method="_on_FruitTab_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
